# agentic-system-from-scratch

./: .gitignore  README.md  basic_agent.py  basic_agent_v2.py  function-calling-llm.py  function_calling_llm.py  pyproject.toml
agent/: Agent.py  __init__.py
model_providers/: README.md  __init__.py  type.py
model_providers/ollama/: __init__.py  llm.py
model_providers/openai/: __init__.py  llm.py
prompts/: __init__.py  fruit.py
tools/: fruit.py
tools/fruit/: README.md  __init__.py  functions.py  schema.py
